--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
@@ -16,7 +16,7 @@
         <com:scriptfile path="qmm017.g.start.js"/>
     </ui:define>
     <ui:define name="content">
-        <div class="contents-area">
+        <div id="contents-area">
             <div style="margin-left: 20px">
                 <div style="min-width: 550px">
                     <div style="width: 130px; margin-top: 20px; display: inline-block;"
