QMM020: update ui: add click to open screen I

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
@@ -51,7 +51,7 @@
                     </div>
                     <div class="cell">
                         <!--I1_6-->
-                        <button data-bind="ntsHelpButton: {image: 'helpcps0092.png',position: 'left bottom', enable: true }">？</button>
+                        <button data-bind="ntsHelpButton: {image: 'helpcps0092.png',position: 'bottom right', enable: true }">？</button>
                     </div>
                 </div>
                 <hr/>
