--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/012/b/qmm012.b.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/012/b/qmm012.b.style.css
@@ -44,7 +44,7 @@
 	width: 128px;
 }
 
-#B3_1, #B3_4, #B3_6,
+#B3_1, #B3_4, #B3_6, #B3_8,
 #C1_1, #C1_4, #C1_8, #C1_12,
 #C2_1, #C2_5, #C2_10, #C2_17,
 #C3_1, #C3_4, #C3_10,
