KAF022, KMK003 remove check permission master list

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -107,7 +107,7 @@
 					#{i18n.getText('KMK003_5')}</button>		
 				<button tabindex="4" class="danger" data-bind="enable: isUpdateMode, click: removeWorkTime">
 					#{i18n.getText('KMK003_6')}</button>
-				<button tabindex="4" data-bind="click: exportExcel, visible:hasPermission()">#{i18n.getText('KMK003_1016')}</button>	
+				<button tabindex="4" data-bind="click: exportExcel">#{i18n.getText('KMK003_1016')}</button>	
 			</div>
 			<div id="contents-area" style="display: none"
 				data-bind="visible: true">
