KMK005 remove hasPermission

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/005/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/005/a/index.xhtml
@@ -16,7 +16,7 @@
 			
 			<ui:define name="content">
 				<div id="functions-area">
-					<button class="exportExcel" data-bind="click: exportExcel, visible:hasPermission()" tabindex="1" >#{i18n.getText('KMK005_134')}</button>
+					<button class="exportExcel" data-bind="click: exportExcel" tabindex="1" >#{i18n.getText('KMK005_134')}</button>
 				</div>
 				<div id="contents-area" class="table">
 					<div>
