--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/012/a/index.xhtml
@@ -25,7 +25,7 @@
 						data-bind="click : registryBtn ,enable: $root.errors.isEmpty">#{i18n.getText('CAS012_5')}</button>
 					<button class="danger" tabindex="3"
 						data-bind="click: deleteBtn, enable: !isCreate()">#{i18n.getText('CAS012_6')}</button>
-                    <button data-bind="click: exportExcel, visible: hasPermission()" tabindex="3" >#{i18n.getText('CAS012_43')}</button>
+                    <button data-bind="click: exportExcel" tabindex="3" >#{i18n.getText('CAS012_43')}</button>
 				</div>
 			</div>
 			<div id="contents-area">
