--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/d/index.xhtml
@@ -37,7 +37,7 @@
             <!-- D1_4 -->
             <button data-bind="click: close" tabindex="4">#{i18n.getText('QMM031_24')}</button>
         </div>
-        <div id="contents-area" style="margin-left: 20px;">
+        <div id="contents-area" style="padding-left: 20px;">
             <div class="table" style="min-width: 1010px;">
                 <div class="cell valign-top" style="padding: 10px; width: 500px;">
                     <!-- D2_1 -->
