Remove check permission

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/003/a/index.xhtml
@@ -38,7 +38,7 @@
 					data-bind="click: deletePattern, enable: $root.errors.isEmpty()  &amp; isEditting()">#{i18n.getText('KSM003_22')}</button>
 				<!-- B1_4: Button Export Excel -->
 				<button tabindex="4"
-						data-bind="click: exportExcel, visible:hasPermission() ">#{i18n.getText('KSM003_44')}</button>
+						data-bind="click: exportExcel">#{i18n.getText('KSM003_44')}</button>
 			</div>
 			<div id="content-area">
 				<div id="left-content" style="float: left"
