--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index1.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index1.xhtml
@@ -39,7 +39,7 @@
                     </td>
                     <td>
                         <div data-bind="if: modeScreen() == nts.uk.pr.view.qmm020.j.viewmodel.MODE_SCREEN.MODE_THREE">
-                            <div id="J1_13" style="" tabindex="2" data-bind="ntsDatePicker: {
+                            <div id="J1_13" tabindex="2" data-bind="ntsDatePicker: {
 												name: '#{i18n.getText('QMM020_63')}',
 												value: endYearMonthPeriod,
 												required: true,
