Fix bug QMM020 E

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
@@ -30,7 +30,7 @@
                 <div style="margin-top: 10px">
                     <table  id="E1_5"  data-bind="ntsGridList: {
                                             name: '#QMM020_14',
-                                            height: 250,
+                                            rows:10,
                                             dataSource: listStateCorrelationHisClassification,
                                             primaryKey: 'hisId',
                                             columns: [
