--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/003/a/index.xhtml
@@ -59,7 +59,7 @@
 					</div>
 				</div>
 				<div id="right-content" style="float: left;"
-					data-bind="with: detail">
+					data-bind="with: mainModel">
 					<table>
 						<colgroup>
 							<col width="213px" />
