--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/003/a/index.xhtml
@@ -80,7 +80,7 @@
 										<div class="a5">
 											<label class="a5_1">#{i18n.getText('KMF003_15')}</label>
 											<div id="monthdays" class="a5_2"
-												data-bind="ntsMonthDays: {value: grantDate, enable: enableGrantDate}" />
+												data-bind="ntsMonthDays: {value: grantDate, enable: enableGrantDate,required:enableGrantDate}" />
 										</div>
 									</div>
 								</td>
