fix bugs qmm002, 003, 006

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
@@ -66,7 +66,7 @@
 								required: false}" />
 						</div>
 					</div>
-					<hr/>
+					<hr></hr>
 					<div data-bind="with: selectedBank">
 						<div class="valign-top control-group">
 							<div data-bind="ntsFormLabel: { constraint: 'Memo' }">#{i18n.getText('QMM002_14')}</div>
@@ -83,6 +83,7 @@
 			<style>
 				.form-label{width: 182px}
 				div.valign-center.control-group { width: 550px }
+				div.valign-top.control-group { width: 550px }
 			</style>
 		</ui:define>
 	</ui:composition>
