--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/a/index.xhtml
@@ -56,27 +56,29 @@
 				</div>
 				<div class="fixed-flex-layout-right" style="padding-top: 20px;">
 					<div data-bind="with: selectedBank">
-						<div style="float: left; width: 60%">
-							<div class="valign-center control-group">
-								<div data-bind="ntsFormLabel: { }">#{i18n.getText('QMM002_13')}</div>
-								<span class="label" data-bind="text: code"></span>
-								<span class="label" style="padding-left: 10px" data-bind="text: name"></span>
+						<div class="cf" style="width: 660px">
+							<div style="float: left; width: 450px">
+								<div class="valign-center control-group">
+									<div data-bind="ntsFormLabel: { }">#{i18n.getText('QMM002_13')}</div>
+									<span class="label" data-bind="text: code"></span>
+									<span class="label" style="padding-left: 10px" data-bind="text: name"></span>
+								</div>
+								<div class="valign-center control-group">
+									<div data-bind="ntsFormLabel: { }">#{i18n.getText('QMM002_15')}</div>
+									<span class="label" data-bind="text: kanaName"></span>
+								</div>
 							</div>
-							<div class="valign-center control-group">
-								<div data-bind="ntsFormLabel: { }">#{i18n.getText('QMM002_15')}</div>
-								<span class="label" data-bind="text: kanaName"></span>
+							<div style="float: left">
+								<textarea style="height: 70px" tabindex="12" data-bind="ntsMultilineEditor: {
+									value: memo,
+									constraint: 'Memo',
+									readonly: true}" />
 							</div>
-						</div>
-						<div style="float: left">
-							<textarea style="height: 70px" tabindex="12" data-bind="ntsMultilineEditor: {
-								value: memo,
-								constraint: 'Memo',
-								readonly: true}" />
 						</div>
 					</div>
 					<hr style="clear: both"></hr>
 					<div data-bind="with: selectedBankBranch">
-						<div class="valign-center control-group">
+						<div class="branch-info valign-center control-group">
 							<div data-bind="ntsFormLabel: {  required: true, constraint: ['BankBranchCode', 'BankBranchName'] }">#{i18n.getText('QMM002_16')}</div>
 							<input tabindex="13" id="A3_9" data-bind="ntsTextEditor: {
 								name: '#[QMM002_17]',
@@ -89,7 +91,7 @@
 								constraint: 'BankBranchName',
 								required: true}" />
 						</div>
-						<div class="valign-center control-group">
+						<div class="branch-info valign-center control-group">
 							<div data-bind="ntsFormLabel: { constraint: 'BankBranchNameKana' }">#{i18n.getText('QMM002_19')}</div>
 							<input tabindex="15" data-bind="ntsTextEditor: {
 								name: '#[QMM002_19]',
@@ -114,7 +116,8 @@
 			</div>
 			<style>
 				.form-label{width: 182px}
-				div.valign-center.control-group { width: 650px }
+				div.branch-info.valign-center.control-group { width: 655px }
+				div.valign-top.control-group { width: 655px }
 			</style>
 		</ui:define>
 	</ui:composition>
