--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
@@ -66,7 +66,7 @@
 								required: false}" />
 						</div>
 					</div>
-					<hr></hr>
+					<hr style="min-width: 550px"></hr>
 					<div data-bind="with: selectedBank">
 						<div class="valign-top control-group">
 							<div data-bind="ntsFormLabel: { constraint: 'Memo' }">#{i18n.getText('QMM002_14')}</div>
