--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
@@ -53,7 +53,7 @@
 								items: items2, 
 								selected: selectedCode, 
 								selectedKey: 'code', 
-								childField: 'childs', 
+								childField: 'children', 
 								fields: ['name', 'code']}" />
 						<!-- A2_3 -->
 						<table id="rsdTree" tabindex="9"
