--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/c/index.xhtml
@@ -25,7 +25,7 @@
 					<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
 					<!-- C1_3 -->
 					<div tabindex="1" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
-						targetKey: 'code', mode:'igTree', comId:'B2_1', items: items2, 
+						targetKey: 'code', mode:'igTree', comId:'C2_1', items: items2, 
 						selected: selectedCode, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
 				</div>
 				<!-- C2_1 -->
