--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/d/index.xhtml
@@ -25,7 +25,7 @@
 				<button tabindex = "2" class="proceed" data-bind="click: register, enable: $root.errors.isEmpty, timeClick: 500">#{i18n.getText('QMM002_2')}</button>
 				<button tabindex = "3" data-bind="click: close, timeClick: 500">#{i18n.getText('QMM002_23')}</button>
 			</div>
-			<div class="contents-area dialog-content fixed-flex-layout" style="padding: 20px 25px">
+			<div id="contents-area" class="fixed-flex-layout">
 				<div class="fixed-flex-layout-left">
 					<table id="single-list" tabindex = "4"
 						data-bind="ntsGridList: {								
