--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/c/index.xhtml
@@ -47,7 +47,7 @@
 			</div>
 			<div id="functions-area-bottom">
 				<!-- C3_1 -->
-				<button tabindex="3" class="x-large proceed" data-bind="enable: selectedCode().length > 2, click: select, timeClick: 500">#{i18n.getText('QMM003_24')}</button>
+				<button tabindex="3" class="x-large proceed" data-bind="enable: enable, click: select, timeClick: 500">#{i18n.getText('QMM003_24')}</button>
 				<!-- C3_2 -->
 				<button tabindex="4" data-bind="click: cancel, timeClick: 500">#{i18n.getText('QMM003_25')}</button>
 			</div>
