--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/007/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/007/a/index.xhtml
@@ -21,6 +21,7 @@
 			<div id="functions-area">
 				<button type="button" class="proceed" id="A_BTN_REGISTER"
 					data-bind="click: saveData">#{i18n.getText('CPS007_3')}</button>
+				<button id="print-button" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button> 
 				<a class="goout"
 					data-bind="ntsLinkButton: { jump: '../../008/a/index.xhtml' }">#{i18n.getText('CPS007_4')}</a>
 			</div>
