--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/a/index.xhtml
@@ -30,6 +30,7 @@
 					<button id="A_BTN_003"
 						data-bind="click: removeWebMenu,enable: !isCreated() "
 						class="danger">#{i18n.getText('CCG013_6')}</button>
+					<button id="A_BTN_009" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
 					<div class="pull-right">
 						<a class="goout"
 							data-bind="ntsLinkButton: { jump: '/view/ccg/014/a/index.xhtml' }">#{i18n.getText('CCG013_7')}</a>
