20190116 - KSM0111 - first commit - Thangnv

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
@@ -69,6 +69,8 @@
 					<button class="proceed" data-bind="click: $parent.viewmodelD.registration.bind($parent.viewmodelD)">#{i18n.getText('KSM011_6')}</button>
 					<button>#{i18n.getText('KSM011_81')}</button>
 				</com:ko-if>
+				
+				<button id="A_BTN_001" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
 			</div>
 			
 			<div id="tabpanel-a" role="tabpanel" class="screen-a" data-bind="with: viewmodelA">
