--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
@@ -25,7 +25,7 @@
 
 		<ui:define name="content">
 			<div id="functions-area">
-				<button type="button" class="proceed" data-bind="" tabindex="1">#{i18n.getText('CPS003_7')}</button>
+				<button type="button" class="proceed" data-bind="click: $vm.register" tabindex="1">#{i18n.getText('CPS003_7')}</button>
 				<button type="button" data-bind="click: $vm.checkError" tabindex="2">#{i18n.getText('CPS003_8')}</button>
 				<button type="button" class="danger" data-bind="" tabindex="3">#{i18n.getText('CPS003_9')}</button>
 				<button type="button" data-bind="click: openBDialog" tabindex="3">#{i18n.getText('CPS003_10')}</button>
@@ -39,7 +39,7 @@
 					<div class="form-groups">
 						<div class="form-group">
 							<div class="fixed-width" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CPS003_12')}</div>
-							<div data-bind="ntsDatePicker: { value: $vm.baseDate, dateFormat: 'YYYY/MM/DD'}"></div>
+							<div id="base-date" data-bind="ntsDatePicker: { value: $vm.baseDate, dateFormat: 'YYYY/MM/DD', name: '#[CPS003_12]'}"></div>
 						</div>
 						<div class="form-group">
 							<div class="fixed-width" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CPS003_13')}</div>
@@ -77,7 +77,7 @@
 							<button data-bind="ntsHelpButton: {textId: 'CPS003_22', position: 'right center'}">?</button>
 							<button id="batch-change" data-bind="text: '#{i18n.getText('CPS003_23')}', click: $vm.settingBatchs.bind($vm)"></button>
 							<button id="settings" data-bind="cps003Setting: $vm.settings.matrixDisplay"></button>
-							<button id="width-save" data-bind="text: '#{i18n.getText('CPS003_24')}'"></button>
+							<button id="width-save" data-bind="text: '#{i18n.getText('CPS003_24')}', click: $vm.saveWidth"></button>
 						</div>
 						<div class="form-group">
 							<div id="grid"></div>
