--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/002/a/index.xhtml
@@ -27,7 +27,7 @@
                   <button tabindex="1" class="proceed" data-bind="click: saveOptionalItemDetail, enable: hasSelected">
                   #{i18n.getText('KMK002_1')}</button>
                   <!-- Print Excel -->
-                  <button id="print-button" data-bind="click: function(){ $vm.exportExcel()}">#{i18n.getText('KMK002_99')}</button>
+                  <button tabindex="1" id="print-button" data-bind="click: function(){ $vm.exportExcel()}">#{i18n.getText('KMK002_99')}</button>
                </div>
                <div id="contents-area" style="display: none" data-bind="visible: true" class="fixed-flex-layout">
                   <!-- Optional item grid list. -->
