--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/051/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/051/a/index.xhtml
@@ -36,8 +36,8 @@
 				<button class="danger"
 					data-bind="click: delWkpManager, enable: !isNewMode()" tabindex="3">#{i18n.getText('CMM044_6')}</button>
 				<!-- export excel -->
-				<button id="print-button" data-bind="click: saveAsExcel">#{i18n.getText('CMM051_34')}</button>
-			</div>
+				<button tabindex="3" id="print-button" data-bind="click: saveAsExcel">#{i18n.getText('CMM051_34')}</button>
+			</div> 
 			<div id="contents-area">
 				<div id="wkp-component"></div>
 				<div id="left-content">
