20190117 - KSM011 - update not create row when not have any data in sheet 04 - Thangnv

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
@@ -70,7 +70,7 @@
 					<button>#{i18n.getText('KSM011_81')}</button>
 				</com:ko-if>
 				
-				<button id="A_BTN_001" data-bind="click: exportExcel">#{i18n.getText('KMK007_4')}</button>
+				<button id="A_BTN_001" data-bind="click: exportExcel">#{i18n.getText('KSM011_136')}</button>
 			</div>
 			
 			<div id="tabpanel-a" role="tabpanel" class="screen-a" data-bind="with: viewmodelA">
