--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/index.xhtml
@@ -21,7 +21,7 @@
 				<div tabindex="-1" id="contents-area" class="fixed-flex-layout">
 			<div>
 				<div style="margin-left: 34px">
-				<button id="print-button" data-bind="click: opencdl028Dialog">#{i18n.getText('KMK007_4')}</button>
+				<button id="print-button"  tabindex="1" data-bind="click: opencdl028Dialog">#{i18n.getText('KMK007_4')}</button>
 				</div>
 				  
 					<div tabindex="-1" class="master_setting caret-inline" style="width: 304px;">
@@ -30,7 +30,7 @@
 						</div>
 						<label tabindex="-1" class="label_tips">#{i18n.getText('KMK011_41')}</label>
 						
-						<button id="btn_openB" tabindex="1" class="large btnconfig" data-bind="click: openDivergenceTimeSetting">#{i18n.getText('KMK011_42')}</button>
+						<button id="btn_openB" tabindex="2" class="large btnconfig" data-bind="click: openDivergenceTimeSetting">#{i18n.getText('KMK011_42')}</button>
 					</div>
 				</div>	
 					<span tabindex="-1" class="master_setting_caret caret-right"></span>
@@ -41,11 +41,11 @@
 						</div>
 						<label tabindex="-1" class="label_tips">#{i18n.getText('KMK011_43')}</label>
 						
-						<button style="margin-bottom: 50px;" tabindex="2" class="large btnconfig caret-bottom" data-bind="click: openUsageUnitSettingDialog">#{i18n.getText('KMK011_44')}</button>
+						<button style="margin-bottom: 50px;" tabindex="3" class="large btnconfig caret-bottom" data-bind="click: openUsageUnitSettingDialog">#{i18n.getText('KMK011_44')}</button>
 						
 						<label tabindex="-1" class="label_tips">#{i18n.getText('KMK011_46')}</label>
 						
-						<button tabindex="3" class="large btnconfig" data-bind="click:  openCreatingDivergenceRefTimePage">#{i18n.getText('KMK011_47')}</button>
+						<button tabindex="4" class="large btnconfig" data-bind="click:  openCreatingDivergenceRefTimePage">#{i18n.getText('KMK011_47')}</button>
 					</div>
 				</div>
 				
