--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/a/index.xhtml
@@ -17,7 +17,7 @@
 
 		<ui:define name="content">
 			<div id="functions-area">
-				<button id="print-button" data-bind="click: exportExcel" style="margin-left: 30px;">#{i18n.getText('KMK007_4')}</button>
+				<button id="print-button" tabindex="1" data-bind="click: exportExcel" style="margin-left: 30px;">#{i18n.getText('KMK007_4')}</button>
 			</div>
 			<div id="contents-area">
 				
